fix: ingredients article description width on mobile

--- a/src/styles/components/ingredients/_articles.scss
+++ b/src/styles/components/ingredients/_articles.scss
@@ -73,9 +73,8 @@
 
     &-description {
       @include paragraph;
-      max-width: 50%;
+      max-width: 100%;
       text-align: center;
-
 
       @include tablet {
         max-width: 100%;
